tests/snapshots/options__opt_select_1_enter@001.snap
---
source: tests/options.rs
description: "input: items [\"1\", \"2\", \"3\", \"11\"]\noptions: -q 1 --select-1"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  11                                                                            "
"> 1                                                                             "
"  2/4                                                                        0/0"
"> 1                                                                             "
cursor: (24, 4)
