tests/snapshots/options__opt_skip_to_pattern@002.snap
---
source: tests/options.rs
description: "input: items [\"a/b/c\"]\noptions: --skip-to-pattern [^/]*$ --bind ctrl-a:scroll-left --bind ctrl-x:scroll-right\nafter:\n  @ctrl 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> .../c                                                                         "
"  1/1                                                                       0/-1"
">                                                                               "
cursor: (24, 3)
