tests/snapshots/options__opt_skip_to_pattern@003.snap
---
source: tests/options.rs
description: "input: items [\"a/b/c\"]\noptions: --skip-to-pattern [^/]*$ --bind ctrl-a:scroll-left --bind ctrl-x:scroll-right\nafter:\n  @ctrl 'x'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> ...c                                                                          "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
