tests/snapshots/options__opt_tabstop_1@001.snap
---
source: tests/options.rs
description: "input: items [\"a\\tb\"]\noptions: --tabstop 1"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a b                                                                           "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
